Integração - Instituição: CURSOS, TURMAS, USUÁRIOS

--- a/instituicao/cursos/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="../../../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
     <link rel="shortcut icon" href="../../../../home/images-global/logo-azul.svg" type="image/x-icon">
+
+    <script src="script.js" defer></script>
+
     <title id="nomeGrupo">Nome do Grupo</title>
 </head>
 
