--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -369,7 +369,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button class="terceiro_botao" type="submit" id="membrosTurmaModal">CRIAR</button>
+                    <button class="terceiro_botao" type="submit" id="membrosTurmaModalCriar">CRIAR</button>
                 </div>
             </div>
         </form>
