ajustes na tela do planner de aluno

--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="arquivos.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
+    <script src="scripts.js" defer></script>
     <title>Arquivos e Links</title>
 </head>
 <body>
@@ -96,31 +97,31 @@
             <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
+                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
             </div>
 
             <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
+                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
             </div>
 
             <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
+                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
             </div>
 
             <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
+                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
             </div>
 
             <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
+                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
             </div>
 
         </div>
