fazendo tela de arquivos do professor

--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -92,39 +92,69 @@
             </a>
         </div>
 
-        <div class="container-arquivos">
+        <ul class="container-arquivos">
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
-            </div>
+            <li class="pasta-arquivo">
+                <div class="conteudo-pasta-arquivo">
+                    <img src="img/icone_pasta.svg" alt="pasta">
+                    <p id="nomeArquivoPasta">Exemplo</p>
+                </div>
+                <div class="images_acoes">
+                    <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
+                    <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
+                    <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                </div>
+            </li>
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
-            </div>
+            <li class="pasta-arquivo">
+                <div class="conteudo-pasta-arquivo">
+                    <img src="img/icone_pasta.svg" alt="pasta">
+                    <p id="nomeArquivoPasta">Exemplo</p>
+                </div>
+                <div class="images_acoes">
+                    <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
+                    <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
+                    <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                </div>
+            </li>
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
-            </div>
+            <li class="pasta-arquivo">
+                <div class="conteudo-pasta-arquivo">
+                    <img src="img/icone_pasta.svg" alt="pasta">
+                    <p id="nomeArquivoPasta">Exemplo</p>
+                </div>
+                <div class="images_acoes">
+                    <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
+                    <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
+                    <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                </div>
+            </li>
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
-            </div>
+            <li class="pasta-arquivo">
+                <div class="conteudo-pasta-arquivo">
+                    <img src="img/icone_pasta.svg" alt="pasta">
+                    <p id="nomeArquivoPasta">Exemplo</p>
+                </div>
+                <div class="images_acoes">
+                    <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
+                    <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
+                    <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                </div>
+            </li>
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="./img/icone_acoes_arquivo.svg" alt="ações">
-            </div>
+            <li class="pasta-arquivo">
+                <div class="conteudo-pasta-arquivo">
+                    <img src="img/icone_pasta.svg" alt="pasta">
+                    <p id="nomeArquivoPasta">Exemplo</p>
+                </div>
+                <div class="images_acoes">
+                    <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
+                    <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
+                    <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                </div>
+            </li>
 
-        </div>
+        </ul>
 
     </main>
 
