INTEGRAÇÃO - Instituição: Listagem de Uusuário

--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -188,7 +188,7 @@
         </div>
 
 
-        <div class="container mt-5 container modal modal-listagem">
+        <div id="container_usuario" class="container mt-5 container modal modal-listagem">
             <h1>USUÁRIO</h1>
             <form class="row g-7">
                 <div class="col-md-6 lab-inp">
@@ -227,24 +227,6 @@
                 </div>
 
             </form>
-            <div class="buttons">
-                <div class="col-md-3">
-                    <button class="primeiro_botao" type="button" onclick="exitModalListagem()">
-                        CANCELAR
-                    </button>
-                </div>
-                <div class="col-md-3">
-                    <button class="terceiro_botao" type="button" onclick="changeModalExcluir()">
-                        EXCLUIR
-                    </button>
-                </div>
-
-                <div class="col-md-6">
-                    <button class="segundo_botao" type="button" onclick="changeModalEditar()">
-                        EDITAR
-                    </button>
-                </div>
-            </div>
         </div>
 
         <div class="container mt-5 container modal modal-editar" id="modal-editar">
