--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -325,7 +325,7 @@
 
             </li>
 
-            <img src="./img/linha.svg" alt="">
+            <!-- <img src="./img/linha.svg" alt=""> -->
 
         </ul>
 
