tipo do input da página de esqueci a senha mudado e fazendo a página de arquivos do professor

--- a/home/login/esqueceu_a_senha.html
+++ b/home/login/esqueceu_a_senha.html
@@ -42,7 +42,7 @@
         <p>Insira seu e-mail para enviarmos um link de redefinição</p>
         <form method="post">
             <div class="txt_field">
-                <input type="text" />
+                <input type="email" />
                 <span></span>
                 <label>Email</label>
                 <img src="img/person.svg" alt="email" />
