--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -99,10 +99,11 @@
                     <img src="img/icone_pasta.svg" alt="pasta">
                     <p id="nomeArquivoPasta">Exemplo</p>
                 </div>
-                <div class="images_acoes">
+                <div class="container_images_acoes">
                     <img class="imgAcoes" src="./img/icone_acoes_arquivo.svg" alt="ações">
                     <i id="editarPastaArquivo" class='bx bxs-edit-alt'></i>
                     <i id="excluirPastaArquivo" class='bx bxs-trash-alt' ></i>
+                    <i id="fecharMenuOpcoes" class='bx bx-x'></i>
                 </div>
             </li>
 
