form da banca progredindo

--- a/aluno/relatorio_banca/disponivel/index.html
+++ b/aluno/relatorio_banca/disponivel/index.html
@@ -34,38 +34,55 @@
             </div>
             <div class="criteriosText">
                 <div class="clareza">
-                    <p>CLAREZA</p>
-                    
-                         <label class="form-control">
-                        <input type="radio" name="radio" />
-                    </label>
+                    <form action="">
+                        <p>CLAREZA</p>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
 
-                    <label class="form-control">
-                        <input type="radio" name="radio" />
-                    </label>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
 
-                    <label class="form-control">
-                        <input type="radio" name="radio" checked />
-                    </label>
-                   
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
+                    </form>
                 </div>
+
                 <div class="objetividade">
-                    <p>OBJETIVIDADE</p>
-                    <label class="form-control">
-                        <input type="radio" name="radio" />
-                    </label>
+                    <form action="">
+                        <p>OBJETIVIDADE</p>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
 
-                    <label class="form-control">
-                        <input type="radio" name="radio" />
-                    </label>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
 
-                    <label class="form-control">
-                        <input type="radio" name="radio" checked />
-                    </label>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
+                    </form>
                 </div>
-                <div class="fluencia">
-                    <p>FLUÊNCIA NA EXPOSIÇÃO DE IDÉIAS</p>
 
+                <div class="fluencia">
+                    <form action="">
+                        <p>FLUÊNCIA</p>
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
+
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
+
+                        <label class="form-control">
+                            <input type="radio" name="radio" />
+                        </label>
+                    </form>
+                </div>
 
 
                 </div>
