Redirecionando Instituição para Login após cadastro

--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -191,7 +191,7 @@
             </div>
 
             <div class="btn_finalizar">
-                <input type="submit" value="FINALIZAR PEDIDO →" />
+                <input type="submit" value="FINALIZAR PEDIDO →">
             </div>
         </form>
     </main>
