Listando Alunos da Turma (Com alguns erros)

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -188,8 +188,8 @@
             </div>
             <div class="alunos">
                 <h1>ALUNOS</h1>
-                <ul class="list-group ul-aluno">
-                    <li class="list-group-item li">
+                <ul class="list-group ul-aluno" id="aluno-container">
+                    <!-- <li class="list-group-item li">
                         <div class="membro">
                             <div class="nome">
                                 <p id="nomeAlunoModal">NOME</p>
@@ -249,7 +249,7 @@
                                 <p id="numeroGrupoAlunoModal"></p>
                             </span>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
