Integrando Exclusão de Grupos

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -391,7 +391,7 @@
                 <button class="segundo_botao" onclick="exitModalExcluirGrupo()" type="button">CANCELAR</button>
             </div>
             <div class="col-md-6">
-                <button class="segundo_botao" id="btnConfirmarExclusao" onclick="exitModalExcluirGrupo()"
+                <button class="segundo_botao" id="btnConfirmarExclusao" onclick="exitModalExcluirGrupo(), exitModalGrupos()"
                     type="submit">CONFIRMAR</button>
             </div>
         </div>
