ajustando visibilidade da senha no input de editar perfil do aluno

--- a/aluno/perfil/editar/index.html
+++ b/aluno/perfil/editar/index.html
@@ -143,13 +143,13 @@
         </div>
       </div>
 
-      <div class="col-md-12 lab-inp">
+      <div class="col-md-12 lab-inp input-senha">
         <label for="senha" class="form-label">NOVA SENHA</label>
         <input id="senha" type="password" class="form-control senha" required maxlength="255">
         <img id="show_password" onclick="alternarSenha()" src="img/eye.svg" alt="eye" />
       </div>
 
-      <div class="col-md-12 lab-inp">
+      <div class="col-md-12 lab-inp input-senha">
         <label for="confirmar_senha" class="form-label">CONFIRME SUA NOVA SENHA</label>
         <input id="confirmar_senha" type="password" class="form-control senha" required maxlength="255">
         <img id="show_password1" onclick="alternarSenhaConfirmar()" src="img/eye.svg" alt="eye" />
