Integração com Erros de Professor Cadastra Grupos

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -98,7 +98,6 @@
             </div>
 
             <ul class="list-group" id="ul_container">
-
             </ul>
         </div>
 
@@ -347,14 +346,14 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="nomeNovoGrupo" class="form-label">Nome:</label>
-                <input type="text" class="form-control novo-grupo" id="inputNomeNovoGrupoModal" placeholder="Grupo 3"
+                <input type="text" class="form-control novo-grupo" id="inputNomeNovoGrupoModal" placeholder="Insira o nome do Grupo"
                     maxlength="255" required>
             </div>
 
             <div class="col-md-6 lab-inp">
                 <label for="numeracao-novo-grupo" class="form-label">Número do grupo:</label>
-                <input type="text" class="form-control numeracao-novo-grupo" id="inputNumeracaoNovoGrupoModal"
-                    placeholder="3" onkeypress="isInputNumber(event)" maxlength="255" required>
+                <input type="number" min="1" class="form-control numeracao-novo-grupo" id="inputNumeracaoNovoGrupoModal"
+                    placeholder="Insira o número do Grupo" onkeypress="isInputNumber(event)" maxlength="255" required>
             </div>
 
             <div class="col-md-12 lab-inp" id="professoresNovoGrupo">
