--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button class="terceiro_botao" onclick="showModalMembros()" type="button"
+                    <button class="terceiro_botao" type="button"
                         id="membrosTurmaModal">MEMBROS DA TURMA</button>
                 </div>
             </div>
