mudando a div quando muda o plano no home e tentando criar as tarefas nas tarefas do aluno

--- a/aluno/planner/index.html
+++ b/aluno/planner/index.html
@@ -145,17 +145,17 @@
 
 
                     <div class="col-md-12 adicionar-tarefa">
-                        <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt="">
+                        <button onclick="caixa1Flex()" class="col-md-12 botao-adicionar" id="btn1"><img src="./img/mais.svg" alt="">
                             Adicionar
                             tarefa</button>
-                        <div class="col-md-12 modal-add-tarefa">
+                        <div class="col-md-12 modal-add-tarefa" id="div1">
                             <input type="text" class="col-md-10 inserir-tarefa" maxlength="255"
                                 placeholder="Insira o nome da tarefa" required />
                             <input type="date" class="col-md-10 inserir-data-conclusao"
                                 placeholder="Insira uma data de conclusão" required />
                             <div class="col-md-12 buttons">
-                                <button class="segundo-botao botao-cancelar">CANCELAR</button>
-                                <button class="primeiro-botao botao-confirmar">CRIAR</button>
+                                <button onclick="showCaixa1Flex()" class="segundo-botao botao-cancelar">CANCELAR</button>
+                                <button onclick="showCaixa1Flex()" class="primeiro-botao botao-confirmar">CRIAR</button>
                             </div>
                         </div>
                     </div>
@@ -373,17 +373,17 @@
 
 
                     <div class="col-md-12 adicionar-tarefa">
-                        <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt="">
+                        <button onclick="caixa2Flex()" class="col-md-12 botao-adicionar" id="btn2"><img src="./img/mais.svg" alt="">
                             Adicionar
                             tarefa</button>
-                        <div class="col-md-12 modal-add-tarefa">
+                        <div class="col-md-12 modal-add-tarefa" id="div2">
                             <input type="text" class="col-md-10 inserir-tarefa" maxlength="255"
                                 placeholder="Insira o nome da tarefa" required />
                             <input type="date" class="col-md-10 inserir-data-conclusao"
                                 placeholder="Insira uma data de conclusão" required />
                             <div class="col-md-12 buttons">
-                                <button class="segundo-botao botao-cancelar">CANCELAR</button>
-                                <button class="primeiro-botao botao-confirmar">CRIAR</button>
+                                <button onclick="showCaixa2Flex()" class="segundo-botao botao-cancelar">CANCELAR</button>
+                                <button onclick="showCaixa2Flex()" class="primeiro-botao botao-confirmar">CRIAR</button>
                             </div>
                         </div>
                     </div>
