--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -41,17 +41,17 @@
         <h1>Comece o seu TCC da melhor forma possível</h1>
         <div class="tipo_plano">
             <ul>
-                <li data-tabs="mensal" class="ativo">MENSAL</li>
-                <li data-tabs="anual">ANUAL</li>
+                <li data-tabs="mensal" class="ativo" id="plano-mensal">MENSAL</li>
+                <li data-tabs="anual" id="plano-anual">ANUAL</li>
             </ul>
         </div>
-        <div class="form_plano">
+        <div class="form_plano mensal">
             <div class="preco_plano">
                 <img src="./img/plano_compra.svg" alt="plano">
                 <div class="valor_plano">
                     <p class="titulo">Mensal</p>
                     <div class="recorrencia_pagamento">
-                        <p class="valor">R$12</p>
+                        <p class="valor">R$120</p>
                         <p class="recorrencia">/mês</p>
                     </div>
                 </div>
@@ -91,7 +91,52 @@
             </form>
         </div>
 
-        </form>
+        <div class="form_plano anual">
+            <div class="preco_plano">
+                <img src="./img/plano_compra.svg" alt="plano">
+                <div class="valor_plano">
+                    <p class="titulo">Anual</p>
+                    <div class="recorrencia_pagamento">
+                        <p class="valor">R$660</p>
+                        <p class="recorrencia">/ano</p>
+                    </div>
+                </div>
+            </div>
+            <div class="infos_plano">
+                <ul>
+                    <li>
+                        <p class="texto">Gerenciamento de professores e alunos</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Melhor organização das atividades em grupo</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Pasta de arquivos compartilhada entre alunos e professores</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Possibilidade de realizar postagens dentro do grupo</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Atribuição de tarefas e prazos</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Envio das avaliações feitas pela banca ao grupo</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                </ul>
+            </div>
+            <form method="get">
+                <a href="./pagamento/index.html">
+                    <input type="button" value="ADQUIRIR" />
+                </a>
+            </form>
+        </div>
+
     </main>
     <footer>
         <a href="../index.html">
