--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -52,7 +52,7 @@
       <span class="tooltip">Projeto</span>
   </li>
   <li>
-      <a href="#">
+      <a href="../tarefas/">
           <i class='bx bx-task' ></i>
           <span class="links_name">Tarefas</span>
       </a>
