--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -145,7 +145,7 @@
 
 
                     <div class="col-md-12 adicionar-tarefa">
-                        <button onclick="caixa1Flex()" class="col-md-12 botao-adicionar" id="btn1"><img src="./img/mais.svg" alt="">
+                        <button onclick="showDivNovaTarefa()" class="col-md-12 botao-adicionar" id="btn1"><img src="./img/mais.svg" alt="">
                             Adicionar
                             tarefa</button>
                         <div class="col-md-12 modal-add-tarefa" id="div1">
@@ -154,8 +154,8 @@
                             <input type="date" class="col-md-10 inserir-data-conclusao"
                                 placeholder="Insira uma data de conclusão" required />
                             <div class="col-md-12 buttons">
-                                <button onclick="showCaixa1Flex()" class="segundo-botao botao-cancelar">CANCELAR</button>
-                                <button onclick="showCaixa1Flex()" class="primeiro-botao botao-confirmar">CRIAR</button>
+                                <button onclick="hideDivNovaTarefa()" class="segundo-botao botao-cancelar">CANCELAR</button>
+                                <button onclick="hideDivNovaTarefa()" class="primeiro-botao botao-confirmar">CRIAR</button>
                             </div>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
 
 
                     <div class="col-md-12 adicionar-tarefa">
-                        <button onclick="caixa2Flex()" class="col-md-12 botao-adicionar" id="btn2"><img src="./img/mais.svg" alt="">
+                        <button onclick="showDivNovaTarefa()" class="col-md-12 botao-adicionar" id="btn2"><img src="./img/mais.svg" alt="">
                             Adicionar
                             tarefa</button>
                         <div class="col-md-12 modal-add-tarefa" id="div2">
@@ -382,8 +382,8 @@
                             <input type="date" class="col-md-10 inserir-data-conclusao"
                                 placeholder="Insira uma data de conclusão" required />
                             <div class="col-md-12 buttons">
-                                <button onclick="showCaixa2Flex()" class="segundo-botao botao-cancelar">CANCELAR</button>
-                                <button onclick="showCaixa2Flex()" class="primeiro-botao botao-confirmar">CRIAR</button>
+                                <button onclick="hideDivNovaTarefa()" class="segundo-botao botao-cancelar">CANCELAR</button>
+                                <button onclick="hideDivNovaTarefa()" class="primeiro-botao botao-confirmar">CRIAR</button>
                             </div>
                         </div>
                     </div>
