--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -109,7 +112,8 @@
                 <ul id="ul_membros" class="list-group ul">
                     <!-- <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -120,7 +124,8 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -131,7 +136,8 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -142,7 +148,8 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -153,7 +160,8 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -164,7 +172,8 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a" data-width="100" data-height="100"></span>
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -244,7 +253,10 @@
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
                     <select class="form-select tipo-select" id="tipo-select-edit" onChange="deletarCampo()">
-                        <option value="selected" disabled="disabled" selected>Professor</option>
+                        <option selected>SELECIONE O TIPO DE USUÁRIO</option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
                     </select>
                 </div>
 
@@ -274,8 +286,41 @@
                     </select>
                 </div>
 
+                <div class="col-md-6 lab-inp" id="grupo">
+                    <label for="tipo-select" class="form-label">Grupo</label>
+                    <select class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="curso-aluno">
+                    <label for="tipo-select" class="form-label">Curso</label>
+                    <select class="form-select tipo-select" class="tipo-select">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="turma-aluno">
+                    <label for="tipo-select" class="form-label">Turma</label>
+                    <select class="form-select tipo-select" class="tipo-select">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
                 <script>
-                    $(document).ready(function() {
+                    $(document).ready(function () {
                         $(".mul-select").select2({});
                     });
                 </script>
@@ -330,19 +375,24 @@
 
                 <div class="col-md-6 lab-inp">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control senha" placeholder="*A SENHA SERÁ ENVIADA NO E-MAIL DO USUÁRIO" disabled>
+                    <input type="password" class="form-control senha"
+                        placeholder="*A SENHA SERÁ ENVIADA NO E-MAIL DO USUÁRIO" disabled>
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <select class="form-select tipo-select" on="" id="tipo-select-criar" onChange="deletarCampoCadastro(); disableSelected()">
-                        <option value="selected" disabled="disabled" selected>Professor</option>
+                    <select class="form-select tipo-select" on="" id="tipo-select-criar"
+                        onChange="deletarCampoCadastro(); disableSelected()">
+                        <option value="selected" disabled="disabled" selected>SELECIONE O TIPO DE USUÁRIO</option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
                     </select>
                 </div>
 
                 <div class="col-md-6 lab-inp" id="curso-cadastro">
                     <label for="tipo-select" class="form-label">Curso</label>
-                    <select class="form-select mul-select" id="input-curso" multiple="true">
+                    <select disabled class="form-select mul-select" id="input-curso" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -355,7 +405,7 @@
 
                 <div class="col-md-6 lab-inp" id="turma-cadastro">
                     <label for="tipo-select" class="form-label">Turma</label>
-                    <select class="form-select mul-select" id="input-turma" multiple="true">
+                    <select disabled class="form-select mul-select" id="input-turma" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -366,8 +416,52 @@
                     </select>
                 </div>
 
+                <div class="col-md-6 lab-inp" id="grupo-cadastro">
+                    <label for="tipo-select" class="form-label">Grupo</label>
+                    <select class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+
+
+                <div class="col-md-4 lab-inp" id="curso-aluno-cadastro">
+                    <label for="tipo-select" class="form-label">Curso</label>
+                    <select class="form-select tipo-select" id="curso-select-cadastro">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
+                <div class="col-md-4 lab-inp" id="turma-aluno-cadastro">
+                    <label for="tipo-select" class="form-label">Turma</label>
+                    <select class="form-select tipo-select" id="turma-select-cadastro">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
+                <div class="col-md-4 lab-inp" id="grupo-aluno-cadastro">
+                    <label for="tipo-select" class="form-label">Grupo</label>
+                    <select class="form-select tipo-select" id="grupo-select-cadastro">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
                 <script>
-                    $(document).ready(function() {
+                    $(document).ready(function () {
                         $(".mul-select").select2({
 
                         });
@@ -381,7 +475,8 @@
                     </div>
 
                     <div class="col-md-3">
-                        <button class="segundo_botao" id="button_salvar" type="button" onclick="resetForm()">SALVAR</button>
+                        <button class="segundo_botao" id="button_salvar" type="button"
+                            onclick="resetForm()">SALVAR</button>
                     </div>
                     <div class="col-md-6 msg-div">
                         <p class="msg">**USUÁRIO CADASTRADO COM SUCESSO</p>
